[#14720] add tooltip and tooltip position for UiActionDescriptor

--- a/api-domain/src/main/resources/descriptors/view-api.yaml
+++ b/api-domain/src/main/resources/descriptors/view-api.yaml
@@ -987,6 +987,17 @@ components:
           type: string
         upload:
           $ref: '#/components/schemas/UiActionUploadDescriptor'
+        tooltip:
+          type: string
+        tooltipPosition:
+          type: string
+          enum:
+            - AFTER
+            - BEFORE
+            - ABOVE
+            - BELOW
+            - LEFT
+            - RIGHT
     UiActionUploadDescriptor:
       type: object
       description: |
