[#15476] add style field for ImageResouce class

--- a/api-domain/src/main/resources/descriptors/view-api.yaml
+++ b/api-domain/src/main/resources/descriptors/view-api.yaml
@@ -1182,3 +1182,6 @@ components:
           type: string
         color:
           type: string
+        style:
+          type: object
+          additionalProperties: true
