[#15591] change Map<String, ImageResource> to Map<String, List<ImageResource>> in GridRow class

--- a/api-domain/src/main/resources/descriptors/grid-api.yaml
+++ b/api-domain/src/main/resources/descriptors/grid-api.yaml
@@ -318,7 +318,9 @@ components:
         icons:
           type: string
           additionalProperties:
-            type: ImageResource
+            type: array
+            items:
+              type: ImageResource
         parent:
           description: |
             If the grid can be hierarchical then the parent contains the identifiers of the
