[#15597] highlightProperty and highlightClass in GridViewDescriptor class

--- a/api-domain/src/main/resources/descriptors/grid-api.yaml
+++ b/api-domain/src/main/resources/descriptors/grid-api.yaml
@@ -379,6 +379,10 @@ components:
           type: boolean
         showEditColumns:
           type: boolean
+        highlightProperty:
+          type: string
+        highlightClass:
+          type: string
     GridSelectionMode:
       type: string
       enum:
