[#15601] change ViewEventHandler handling to conform action handling
ViewEventHandler now contains InvocationRequest instead of
InvocationRequestDefinition. Expected method signatures are the same as
methods which are handled (see ActionHandler and WidgetActionHandler).

--- a/api-domain/src/main/resources/descriptors/view-api.yaml
+++ b/api-domain/src/main/resources/descriptors/view-api.yaml
@@ -616,8 +616,11 @@ components:
             type: string
         viewEventType:
           enum: [before, instead, after]
-        invocationRequestDefinition:
-          type: InvocationRequestDefinition
+        invocationRequest:
+          description: |
+            This is the method to call when the event occurs. It's signature is the same as the event which
+            it specifies, like ActionHandler or WidgetActionHandler.
+          type: InvocationRequest
     ViewData:
       type: object
       required: [uuid,viewName,state,type]
