[#15602] add pageSize to updateGridData

--- a/api-domain/src/main/resources/descriptors/grid-api.yaml
+++ b/api-domain/src/main/resources/descriptors/grid-api.yaml
@@ -431,3 +431,6 @@ components:
           type: array
           items:
             type: FilterExpressionOrderBy
+        pageSize:
+          type: integer
+          format: int32
