[#14720] add delay for tooltip

--- a/api-domain/src/main/resources/descriptors/view-api.yaml
+++ b/api-domain/src/main/resources/descriptors/view-api.yaml
@@ -991,6 +991,11 @@ components:
         upload:
           $ref: '#/components/schemas/UiActionUploadDescriptor'
         tooltip:
+          $ref: '#/components/schemas/UiActionTooltip'
+    UiActionTooltip:
+      type: object
+      properties:
+        tooltip:
           type: string
         tooltipPosition:
           type: string
@@ -1001,6 +1006,9 @@ components:
             - BELOW
             - LEFT
             - RIGHT
+        tooltipDelay:
+          type: integer
+          format: int64
     UiActionUploadDescriptor:
       type: object
       description: |
