[#14789] handle pageIndex in GridModel

--- a/api-domain/src/main/resources/descriptors/grid-api.yaml
+++ b/api-domain/src/main/resources/descriptors/grid-api.yaml
@@ -257,6 +257,9 @@ components:
           format: int32
         allRowsSelected:
           type: boolean
+        pageIndex:
+          type: integer
+          format: int32
         pageSize:
           type: integer
           format: int32
