--- a/bff-domain/src/main/resources/descriptors/mdm-api.yaml
+++ b/bff-domain/src/main/resources/descriptors/mdm-api.yaml
@@ -23,3 +23,8 @@ components:
         vectorCollection:
           type: VectorCollectionDescriptor
           description: The descriptor of the VectorCollection bound to this entry.
+    MDMEntryChangesPageModel:
+      type: object
+      properties:
+        latestModificationNote:
+          type: MDMModificationNote
