--- a/bff-domain/build.gradle
+++ b/bff-domain/build.gradle
@@ -19,6 +19,7 @@ smartbit4all {
      "FilterExpressionFieldList": "org.smartbit4all.api.filterexpression.bean.FilterExpressionFieldList",
      "SubjectTypeDescriptor" : "org.smartbit4all.api.org.bean.SubjectTypeDescriptor",
      "VectorCollectionDescriptor" : "org.smartbit4all.api.collection.bean.VectorCollectionDescriptor",
+     "MDMModificationNote": "org.smartbit4all.api.mdm.bean.MDMModificationNote"
     ]
   }
 }
