[#15730] show select approver on mdm entry changes page

--- a/bff-domain/src/main/resources/descriptors/mdm-api.yaml
+++ b/bff-domain/src/main/resources/descriptors/mdm-api.yaml
@@ -28,3 +28,5 @@ components:
       properties:
         latestModificationNote:
           type: MDMModificationNote
+        approverName:
+          type: string
