[#15765] User primary account

--- a/api-domain/src/main/resources/descriptors/org-api.yaml
+++ b/api-domain/src/main/resources/descriptors/org-api.yaml
@@ -169,6 +169,10 @@ components:
           type: object
           additionalProperties:
             type: string
+        primaryAccount:
+          type: string
+          format: uri
+          description: The reference to the primary account if any.
     Group:
       type: object
       required: [uri, name, kind, children]
