[#15591] Style in ImageResource, adjust tooltip delay, add tooltip to ImageResource

--- a/api-domain/src/main/resources/descriptors/view-api.yaml
+++ b/api-domain/src/main/resources/descriptors/view-api.yaml
@@ -1020,6 +1020,9 @@ components:
         tooltipDelay:
           type: integer
           format: int64
+        tooltipHideDelay:
+          type: integer
+          format: int64
     UiActionUploadDescriptor:
       type: object
       description: |
@@ -1205,8 +1208,9 @@ components:
         color:
           type: string
         style:
-          type: object
-          additionalProperties: true
+          $ref: '#/components/schemas/Style'
+        tooltip:
+          $ref: '#/components/schemas/UiActionTooltip'
     Style:
       type: object
       description: Style data holder for client
