[#15204] vector lookup fix

--- a/api-domain/src/main/resources/descriptors/collection-api.yaml
+++ b/api-domain/src/main/resources/descriptors/collection-api.yaml
@@ -146,15 +146,13 @@ components:
       type: object
       required: [inputType, inputObject, vector]
       properties:
-        id:
-          type: string
-          description: The unique identifier of the object found.
         score:
           type: number
           format: float
           description: The score of the found item.
         value:          
-          $ref: '#/components/schemas/VectorValue'
+          type: object
+          additionalProperties: true
     ObjectLookupParameter:
       description: |
         The parameters of an Object lookup.
